Native/Test/KL/loop-var-decl-scope.out
loop-var-decl-scope.kl:5:10: error: 'i': symbol not found
